# docling_demo

./: Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  ingest.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: config.py  db.py  ingest.py  main.py  matcher.py  normalizer.py  presenter.py
docs/: log-signature-ingestion-singleline.md
ingestion/: __init__.py  chunk_code.py  chunk_prose.py  discover.py  extract_prose.py  models.py  redact.py  tokenizer.py
output/: chunks.jsonl  myout.json
sample_docs/: connection_pool_guide.md  healthcheck.sh  log-to-poa-design.md  pool_manager.py  restart_runbook.txt
seed/: seed_example.yaml
tests/: test_matcher.py  test_normalizer.py
